# tadd43723

./: .env.template  LICENSE  README.md  docker-compose.dev.yml  pyproject.toml
tadd43723/: manage.py
tadd43723/core/business_logic/: exceptions.py
tadd43723/core/business_logic/dto/: __init__.py  index.py
tadd43723/core/business_logic/schemas/: __init__.py  index.py
tadd43723/core/business_logic/services/: __init__.py  data.py  index.py
tadd43723/core/migrations/: 0001_initial.py
tadd43723/core/models/: __init__.py  record.py
tadd43723/core/presentation/: converters.py  urls.py  validators.py
tadd43723/core/presentation/forms/: __init__.py  data.py
tadd43723/core/presentation/templates/: data.html  index.html
tadd43723/core/presentation/views/: __init__.py  data.py  index.py
tadd43723/static/css/: base.css
tadd43723/static/css/core/: data.css  index.css
tadd43723/tadd43723/: asgi.py  logger_formatter.py  settings.py  urls.py  wsgi.py
tadd43723/templates/: base.html
