[tool.poetry]
name = "tadd43723"
version = "0.1.0"
description = ""
authors = ["san0kq <sanrom94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
psycopg2-binary = "2.9.8"
python-decouple = "3.8"
pydantic = "^2.4.2"
dacite = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
